istio/internal-request-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: istio-ingressgateway-internal
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway-internal
  jwtRules:
  - issuer: https://accounts.google.com
    jwksUri: https://www.googleapis.com/oauth2/v3/certs
