istio/internal-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingressgateway-internal
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway-internal
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - monitoring/prometheus.lukeaddison.co.uk
