istio/kiali-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-url: "https://oauth2.lukeaddison.co.uk/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth2.lukeaddison.co.uk/oauth2/start?rd=https://$host$request_uri"
spec:
  tls:
  - secretName: kiali-tls
    hosts:
    - kiali.lukeaddison.co.uk
  rules:
  - host: kiali.lukeaddison.co.uk
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: kiali
            port:q
              number: 20001
