istio/prometheus-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: istio-system
spec:
  hosts:
  - prometheus.lukeaddison.co.uk
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - match:
    - port: 8443
    route:
    - destination:
        host: istio-ingressgateway-internal
        port:
          number: 80
